fixed text overflowing outside of box

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -34,6 +34,10 @@ input[type=radio] {
 	background-color: #fff;
 
 	.elem {
+		max-width: 100%;
+		max-height: 100%;
+		overflow: hidden;
+		cursor: pointer;
 		border: 1px transparent;
 		height: auto;
 		position: absolute;
@@ -47,6 +51,7 @@ input[type=radio] {
 
 		&.selected {
 			outline: 2px solid rgba($selected_color, .65);
+			cursor: move;
 
 			+ .elem_edit {
 				display: block;
@@ -79,6 +84,10 @@ input[type=radio] {
 	
 		.underline {
 			text-decoration: underline;
+		}
+
+		&.editing {
+			cursor: text
 		}
 	}
 
